<resources>
    <string name="app_name">Native Gradle Sample</string>
    <string name="log_in">LOG-IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="home">HOME</string>
    <string name="inventory">INVENTORY</string>
    <string name="node_versions">Node Versions</string>
    <string name="title_activity_log_in">Log-In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="name">NAME</string>
    <string name="nav_header_desc" />
    <string name="nav_header_title" />
    <string name="nav_header_subtitle" />
    <string name="menu_home" />
    <string name="menu_gallery" />
    <string name="menu_slideshow" />
    <string name="action_settings" />
    <string name="home_second" />
    <string name="welcome_back">WELCOME BACK</string>
    <string name="price_10_book">Price\nBook</string>
    <string name="view_10_rooms">View\nRooms</string>
    <string name="track_10_purchases">Track\nPurchases</string>
    <string name="search">Search</string>
    <string name="your_shortcuts">YOUR SHORTCUTS</string>
    <string name="you_don_t_have_any_rooms_right_now">You don\'t have any rooms right now.</string>
    <string name="view_rooms">VIEW ROOMS</string>
    <string name="advertisement">ADVERTISEMENT</string>
    <string name="done">DONE</string>
    <string name="enter_room_n_name">ENTER ROOM \n NAME:</string>
    <string name="add_room">ADD ROOM</string>
    <string name="ex_kitchen">EX: KITCHEN</string>
    <string name="add_item">ADD ITEM</string>
    <string name="view_items">VIEW ITEMS</string>
    <string name="ex_bread">EX: BREAD</string>
    <string name="cabinet">CABINET</string>
    <string name="ex_cabinet">EX: CABINET</string>
    <string name="add_list">ADD LIST</string>
    <string name="item_name">ITEM NAME</string>
    <string name="quantity">QUANTITY</string>
    <string name="item">ITEM</string>
    <string name="price_book">PRICE BOOK</string>
    <string name="item_purchased">ITEM PURCHASED</string>
    <string name="price">PRICE</string>
    <string name="add_user">ADD USER</string>
    <string name="enter_user_s_name">ENTER USER\'S NAME</string>
    <string name="enter_user_s_email">ENTER USER\'S EMAIL</string>
    <string name="email_address">Email Address</string>
    <string name="add_user_to_this_list">ADD USER TO THIS LIST</string>
    <string name="shop">SHOP</string>
    <string name="shop_retailers">SHOP RETAILERS</string>
    <string name="item_npurchased">ITEM\nPURCHASED</string>
    <string name="location_npurchased">LOCATION\nPURCHASED</string>
    <string name="category">CATEGORY</string>
    <string name="track_purchases">TRACK PURCHASES</string>
    <string name="data_visualization">DATA VISUALIZATION</string>
    <string name="select_timeframe_below">SELECT TIMEFRAME BELOW</string>
    <string name="perform_data_nvisualization">PERFORM DATA\nVISUALIZATION</string>
    <string name="track_online_npurchases">TRACK ONLINE\nPURCHASES</string>
</resources>
