<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PriceBookActivity">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="410dp"
        android:layout_height="75dp"
        android:background="#93CED6"
        android:gravity="center|top"
        android:text="@string/price_book"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/listView_lv5"
        android:layout_width="406dp"
        android:layout_height="549dp"
        android:isScrollContainer="false"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="117dp"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/item_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="74dp"
        android:layout_height="51dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/quantity"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/price"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="78dp"
        android:layout_height="57dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/location_npurchased"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="78dp"
        android:layout_height="50dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/category"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />

    <Button
        android:id="@+id/button11"
        android:layout_width="385dp"
        android:layout_height="36dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:background="#93CED6"
        android:text="@string/add_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
