<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yourorg.sample.MainActivity">

    <Button
        android:id="@+id/btVersions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/node_versions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvVersions"
        android:layout_width="418dp"
        android:layout_height="736dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#93CED6"
        android:backgroundTint="#93CED6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:onClick="logIn"
        android:text="@string/log_in"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:onClick="signUp"
        android:text="@string/sign_up"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="75dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="213dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/home"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="334dp"
        android:layout_height="74dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="22dp"
        android:text="@string/inventory"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356" />

</android.support.constraint.ConstraintLayout>
